--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.5",
+    "@autospace/sample-lib":"*",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
